Fix grid-gap bug

--- a/static/style.css
+++ b/static/style.css
@@ -252,7 +252,6 @@ h2 {
 @media screen and (max-width: 800px) {
     .card-grid, .card-grid-lg{
         gap: 20px;
-        display: block;
     }
 }
 @media screen and (max-width: 500px) {
